WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218739
Fix crashes when mapping shared display list item data into display lists in the GPU process
https://bugs.webkit.org/show_bug.cgi?id=218739
Summary
Fix crashes when mapping shared display list item data into display lists in ...
Wenson Hsieh
Reported
2020-11-09 21:58:17 PST
<
rdar://problem/71212909
>
Attachments
Patch
(2.77 KB, patch)
2020-11-09 22:14 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-11-09 21:59:34 PST
Addresses a bug in the placeholder mechanism I landed to act as a "halfway point" between Ref-counted display list items and fully concurrent display list processing.
Wenson Hsieh
Comment 2
2020-11-09 22:14:10 PST
Created
attachment 413663
[details]
Patch
Wenson Hsieh
Comment 3
2020-11-09 23:51:08 PST
Comment on
attachment 413663
[details]
Patch Thanks for the review!
EWS
Comment 4
2020-11-10 00:07:42 PST
Committed
r269617
: <
https://trac.webkit.org/changeset/269617
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413663
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug